fix recover visibility of current active pomodoro task text

--- a/src/styles/components/_pomodoro.scss
+++ b/src/styles/components/_pomodoro.scss
@@ -33,7 +33,7 @@
     word-break: break-word;
 
     @include respond(mobile) {
-      display: none;
+      font-size: $font-size-md;
     }
   }
   &__timer {
